doc: fix inability to hover version-picker
0.25rem = height of `li` - offset for `ol.version-picker` = 1rem - 1.25rem
`left` and `right` is -1 because of the border

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -149,6 +149,15 @@ ol.version-picker {
   width: 100%;
 }
 
+ol.version-picker::before {
+  content: '';
+  position: absolute;
+  top: -.25rem;
+  left: -1px;
+  right: -1px;
+  height: .25rem;
+}
+
 #gtoc ol.version-picker li {
   display: block;
   border-right: 0;
